--- a/index.html
+++ b/index.html
@@ -11,65 +11,41 @@
 </head>
 
 <body>
-  <div class="flex-col" style="width: 90%;">
+  <div class="wrapper">
 
     <section id="green" class="green">
       <p>GREEN</p>
     </section>
 
-    <div class="flex-row">
 
-      <div class="flex-col" style="width: 60%;">
 
-        <div class="flex-row">
-          
-          <div class="flex-col">
-            <section id="yellow" class="yellow">
-              <p>YELLOW</p>
-              <ul>
-                <div class="flex-row">
-                  <li>1</li>
-                  <li>2</li>
-                </div>
-                <div class="flex-row">
-                  <li>3</li>
-                  <li>4</li>
-                </div>
-              </ul>
-            </section>
-          </div>
+    <section id="yellow" class="yellow">
+      <p>YELLOW</p>
+      <ul class="yellow_grid">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ul>
+    </section>
 
-          <div class="flex-col">
-            <section id="red" class="red">
-              <p>RED</p>
-              <ul>
-                <div class="flex-row">
-                  <li>A</li>
-                  <li>B</li>
-                </div>
-                <div class="flex-row">
-                  <li>C</li>
-                  <li>D</li>
-                </div>
-              </ul>
-            </section>
-          </div>
+    <section id="red" class="red">
+      <p>RED</p>
+      <ul class="red_grid">
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>D</li>
+      </ul>
+    </section>
 
-        </div>
+    <section id="blue" class="blue">
+      <p>BLUE</p>
+    </section>
 
-        <section id="orange" class="orange">
-          <p>ORANGE</p>
-        </section>
-
-      </div>
-
-      <div class="flex-col" style="width: 36%;">
-        <section id="blue" class="blue">
-          <p>BLUE</p>
-        </section>
-      </div>
-
-    </div>
+    <section id="orange" class="orange">
+      <p>ORANGE</p>
+    </section>
 
   </div>
 
